--- a/package.json
+++ b/package.json
@@ -16,12 +16,22 @@
 		"@sveltejs/adapter-cloudflare": "^4.4.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"autoprefixer": "^10.4.19",
+		"drizzle-kit": "^0.21.4",
+		"postcss": "^8.4.38",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.5.14",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.4.3",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"vite": "^5.0.3",
+		"wrangler": "^3.57.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"dexie": "^4.0.7",
+		"drizzle-orm": "^0.30.10"
+	}
 }
